objects/sf42_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Additional Comments, Special Instructions.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order Processing</label>
        <referenceTo>Order_Processing__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PTAG_Received_at__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Received at</label>
        <referenceTo>Bank_account__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ref_Accounting_Software__c</fullName>
        <inlineHelpText>Ref. Number or Invoice Number from Accounting Software when exist.</inlineHelpText>
        <label>Ref # -  Accounting Software</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_OTHER_Freight_insurance_etc__c</fullName>
        <label>SALES OTHER (Freight, insurance etc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SALES_OTHER_Rental__c</fullName>
        <label>SALES OTHER (Rental)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_ALI__c</fullName>
        <inlineHelpText>Product Sales ALI</inlineHelpText>
        <label>SALES ALI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ptt_ALI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box in Invoice tab</description>
        <label>ALI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_CM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.sf42_Account__c</valueField>
            </filterItems>
            <infoMessage>By default this list is filtered to Selected Account contacts list.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Creator_BU__c</fullName>
        <formula>TEXT( CreatedBy.sf42_Business_Unit__c)</formula>
        <label>Creator BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Customer_PO_number__c</fullName>
        <label>Customer PO number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_NDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>sf42_Project__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Services_Demos__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Relation to S&amp;D for which Invoice was issued.</inlineHelpText>
        <label>Services &amp; Demos</label>
        <referenceTo>Service_and_Demontration__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Tax_Number__c</fullName>
        <formula>sf42_Account__r.ptt_tax_number__c</formula>
        <label>Tax Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_gl_invoice_number__c</fullName>
        <inlineHelpText>This invoice number is dedicated for your unit. You can use it as reference.</inlineHelpText>
        <label>Your PT invoice #</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Account_Name_Jp__c</fullName>
        <formula>sf42_Account__r.sf42_jp_Account_Name_jp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name JP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices1</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf42_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf42_Amount_loses__c</fullName>
        <label>Amount loses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_Bank_charge__c</fullName>
        <label>Bank charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_Date_of_Invoice_2__c</fullName>
        <label>Date of Invoice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_Invoices_Number_OLD__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Invoices Number OLD</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf42_Invoices_Number__c</fullName>
        <formula>BLANKVALUE( sf42_Invoices_Number_OLD__c ,   Name )</formula>
        <inlineHelpText>This is global Invoice number for all PT units.
Please DO NOT REFER to that number in your documents.</inlineHelpText>
        <label>Salesforce Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Old_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf42_Received_Amount__c</fullName>
        <label>Received Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_Received_at__c</fullName>
        <label>Received at</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tokyo Mitsubishi UFJ</fullName>
                </value>
                <value>
                    <fullName>Deutsche Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Received_on__c</fullName>
        <label>Received on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_SALES_CM__c</fullName>
        <label>SALES CM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_SALES_MACHINERY_SERVICE__c</fullName>
        <label>SALES MACHINERY SERVICE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_SALES_NDT__c</fullName>
        <label>SALES NDT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_SALES_OTHERS__c</fullName>
        <label>SALES OTHERS SERVICE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_SALES_OTHER_PRODUCTS__c</fullName>
        <label>SALES OTHER PRODUCTS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_SALES_OTHER_SERVICE__c</fullName>
        <label>SALES OTHER SERVICE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_SALES_PRODUCT_SERVICE_REPAIRS__c</fullName>
        <label>SALES PRODUCT SERVICE, REPAIRS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_SALES_TRAINING__c</fullName>
        <label>SALES TRAINING</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_Total_Amount__c</fullName>
        <description>Consumption Tax has been changed from 5% to 8% at 1 April 2014.
Consumption tax changed from 8% to 10% from 1st of October 2019.</description>
        <formula>IF(sf42_consumption_tax_2__c, IF( sf42_Date_of_Invoice_2__c &lt; DATE(2014, 4, 1),sf42_Amount__c * 1.05,IF( sf42_Date_of_Invoice_2__c &gt;= DATE(2019, 10, 1),sf42_Amount__c * 1.10,sf42_Amount__c * 1.08)),sf42_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf42_consumption_tax_2__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Consumption Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_consumption_tax__c</fullName>
        <description>Consumption Tax has been changed from 5% to 8% at 1 April 2014.
Consumption tax changed from 8% to 10% from 1st of October 2019.</description>
        <formula>IF( sf42_consumption_tax_2__c, 
	IF( sf42_Date_of_Invoice_2__c &lt; DATE(2014, 4, 1),sf42_Amount__c * 0.05, 
	 IF( sf42_Date_of_Invoice_2__c &gt;= DATE(2019, 10, 1),sf42_Amount__c * 0.10, sf42_Amount__c * 0.08)), 
	sf42_Amount__c * 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumption Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf42_controll_field_Amount__c</fullName>
        <formula>sf42_SALES_MACHINERY_SERVICE__c + Sales_ALI__c + sf42_SALES_CM__c + sf42_SALES_NDT__c +
sf42_SALES_OTHER_PRODUCTS__c + sf42_SALES_OTHER_SERVICE__c + sf42_SALES_PRODUCT_SERVICE_REPAIRS__c + sf42_SALES_TRAINING__c+ sf42_SALES_OTHERS__c + SALES_OTHER_Freight_insurance_etc__c + SALES_OTHER_Rental__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This amount must be same as total Amount</inlineHelpText>
        <label>controll field Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PT - Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>sf42_Invoices_Number__c</columns>
        <columns>ptt_gl_invoice_number__c</columns>
        <columns>sf42_Account_Name_Jp__c</columns>
        <columns>sf42_Date_of_Invoice_2__c</columns>
        <columns>sf42_Due_Date__c</columns>
        <columns>sf42_Amount__c</columns>
        <columns>sf42_consumption_tax__c</columns>
        <columns>sf42_Total_Amount__c</columns>
        <columns>sf42_Received_on__c</columns>
        <columns>sf42_Received_Amount__c</columns>
        <columns>sf42_Bank_charge__c</columns>
        <columns>sf42_Amount_loses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Date_of_Invoice_2__c</field>
            <operation>greaterThan</operation>
            <value>1/31/2020</value>
        </filters>
        <filters>
            <field>sf42_Date_of_Invoice_2__c</field>
            <operation>lessThan</operation>
            <value>12/31/2020</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Invocies_2011</fullName>
        <columns>NAME</columns>
        <columns>ptt_gl_invoice_number__c</columns>
        <columns>sf42_Account_Name_Jp__c</columns>
        <columns>sf42_Date_of_Invoice_2__c</columns>
        <columns>sf42_Due_Date__c</columns>
        <columns>sf42_Received_on__c</columns>
        <columns>sf42_Amount__c</columns>
        <columns>sf42_Total_Amount__c</columns>
        <columns>sf42_Received_Amount__c</columns>
        <columns>sf42_Bank_charge__c</columns>
        <columns>sf42_Amount_loses__c</columns>
        <columns>sf42_Received_at__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Date_of_Invoice_2__c</field>
            <operation>equals</operation>
            <value>8/29/2014</value>
        </filters>
        <filters>
            <field>sf42_Account__c</field>
            <operation>equals</operation>
            <value>SUNCALL</value>
        </filters>
        <label>SUNCALL</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Japan</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Invoice_2014_2015</fullName>
        <columns>sf42_Date_of_Invoice_2__c</columns>
        <columns>NAME</columns>
        <columns>ptt_gl_invoice_number__c</columns>
        <columns>Order__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>sf42_Amount__c</columns>
        <columns>Sales_ALI__c</columns>
        <columns>sf42_SALES_CM__c</columns>
        <columns>sf42_SALES_NDT__c</columns>
        <columns>sf42_SALES_OTHER_PRODUCTS__c</columns>
        <columns>sf42_SALES_MACHINERY_SERVICE__c</columns>
        <columns>sf42_SALES_PRODUCT_SERVICE_REPAIRS__c</columns>
        <columns>sf42_SALES_TRAINING__c</columns>
        <columns>SALES_OTHER_Rental__c</columns>
        <columns>SALES_OTHER_Freight_insurance_etc__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Date_of_Invoice_2__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2021</value>
        </filters>
        <filters>
            <field>sf42_Date_of_Invoice_2__c</field>
            <operation>lessThan</operation>
            <value>1/31/2021</value>
        </filters>
        <label>PTKK Invoice list for weekly check＊</label>
        <language>en_US</language>
        <sharedTo>
            <group>PT_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Invoice_Last_Month</fullName>
        <columns>NAME</columns>
        <columns>ptt_gl_invoice_number__c</columns>
        <columns>sf42_Account_Name_Jp__c</columns>
        <columns>sf42_Date_of_Invoice_2__c</columns>
        <columns>sf42_Amount__c</columns>
        <columns>sf42_consumption_tax__c</columns>
        <columns>sf42_Total_Amount__c</columns>
        <columns>sf42_Due_Date__c</columns>
        <columns>sf42_Received_on__c</columns>
        <columns>sf42_Received_Amount__c</columns>
        <columns>sf42_Bank_charge__c</columns>
        <columns>sf42_Amount_loses__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Date_of_Invoice_2__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2020</value>
        </filters>
        <filters>
            <field>sf42_Date_of_Invoice_2__c</field>
            <operation>lessThan</operation>
            <value>1/30/2021</value>
        </filters>
        <label>Invoice_last month</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Japan</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Invoice_This_Month</fullName>
        <columns>NAME</columns>
        <columns>ptt_gl_invoice_number__c</columns>
        <columns>sf42_Date_of_Invoice_2__c</columns>
        <columns>sf42_Due_Date__c</columns>
        <columns>sf42_Account_Name_Jp__c</columns>
        <columns>sf42_Amount__c</columns>
        <columns>sf42_consumption_tax__c</columns>
        <columns>sf42_Total_Amount__c</columns>
        <columns>sf42_Received_on__c</columns>
        <columns>sf42_Received_Amount__c</columns>
        <columns>sf42_Bank_charge__c</columns>
        <columns>sf42_Amount_loses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Date_of_Invoice_2__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2019</value>
        </filters>
        <filters>
            <field>sf42_Date_of_Invoice_2__c</field>
            <operation>lessThan</operation>
            <value>12/31/2020</value>
        </filters>
        <filters>
            <field>sf42_Received_Amount__c</field>
            <operation>equals</operation>
        </filters>
        <label>Invoice_not received **</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Japan</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Invoices_last_14_days</fullName>
        <columns>NAME</columns>
        <columns>ptt_gl_invoice_number__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>Order__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>Invoices last 14 days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JP_Open_Invoices</fullName>
        <columns>ptt_gl_invoice_number__c</columns>
        <columns>sf42_Date_of_Invoice_2__c</columns>
        <columns>sf42_Account_Name_Jp__c</columns>
        <columns>sf42_Amount__c</columns>
        <columns>sf42_consumption_tax__c</columns>
        <columns>sf42_Total_Amount__c</columns>
        <columns>sf42_SALES_NDT__c</columns>
        <columns>sf42_SALES_OTHER_PRODUCTS__c</columns>
        <columns>sf42_SALES_PRODUCT_SERVICE_REPAIRS__c</columns>
        <columns>sf42_SALES_TRAINING__c</columns>
        <columns>sf42_SALES_OTHERS__c</columns>
        <columns>sf42_SALES_MACHINERY_SERVICE__c</columns>
        <columns>SALES_OTHER_Rental__c</columns>
        <columns>SALES_OTHER_Freight_insurance_etc__c</columns>
        <columns>sf42_Received_on__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Date_of_Invoice_2__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2019</value>
        </filters>
        <filters>
            <field>sf42_Date_of_Invoice_2__c</field>
            <operation>lessThan</operation>
            <value>1/1/2021</value>
        </filters>
        <filters>
            <field>ptt_NDT__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>NDT</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Japan</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Received_Invoice</fullName>
        <columns>NAME</columns>
        <columns>ptt_gl_invoice_number__c</columns>
        <columns>sf42_Account_Name_Jp__c</columns>
        <columns>sf42_Date_of_Invoice_2__c</columns>
        <columns>sf42_Amount__c</columns>
        <columns>sf42_consumption_tax__c</columns>
        <columns>sf42_Total_Amount__c</columns>
        <columns>sf42_Due_Date__c</columns>
        <columns>sf42_Received_on__c</columns>
        <columns>sf42_Received_Amount__c</columns>
        <columns>sf42_Bank_charge__c</columns>
        <columns>sf42_Amount_loses__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Received_on__c</field>
            <operation>greaterThan</operation>
            <value>6/26/2020</value>
        </filters>
        <label>Received</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Japan</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>free_list1</fullName>
        <columns>NAME</columns>
        <columns>ptt_gl_invoice_number__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>sf42_Date_of_Invoice_2__c</columns>
        <columns>sf42_Due_Date__c</columns>
        <columns>sf42_Amount__c</columns>
        <columns>sf42_Total_Amount__c</columns>
        <columns>Order__c</columns>
        <columns>ptt_ALI__c</columns>
        <columns>ptt_CM__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_NDT__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ptt_gl_invoice_number__c</field>
            <operation>contains</operation>
            <value>20200</value>
        </filters>
        <filters>
            <field>sf42_Date_of_Invoice_2__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2020</value>
        </filters>
        <filters>
            <field>sf42_SALES_PRODUCT_SERVICE_REPAIRS__c</field>
            <operation>greaterThan</operation>
            <value>JPY 0</value>
        </filters>
        <label>JP_Calibration &amp; Repair</label>
        <language>en_US</language>
        <sharedTo>
            <role>Japan</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{00000}</displayFormat>
        <label>Salesforce Invoce Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Received_Money_is_Invoice_amount</fullName>
        <active>true</active>
        <errorConditionFormula>NOT ( sf42_Amount__c = sf42_Bank_charge__c + sf42_Received_Amount__c + sf42_Amount_loses__c )</errorConditionFormula>
        <errorMessage>Please check your entrey of bank charges, received amount and invoice amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>check_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>sf42_Amount__c &lt;&gt; 
BLANKVALUE( sf42_SALES_NDT__c, 0) + BLANKVALUE(sf42_SALES_OTHERS__c, 0) + BLANKVALUE(sf42_SALES_OTHER_PRODUCTS__c, 0) + BLANKVALUE(sf42_SALES_MACHINERY_SERVICE__c, 0) + BLANKVALUE(sf42_SALES_OTHER_SERVICE__c , 0) + BLANKVALUE(sf42_SALES_PRODUCT_SERVICE_REPAIRS__c, 0) + BLANKVALUE(sf42_SALES_TRAINING__c, 0)+
BLANKVALUE(sf42_SALES_CM__c, 0) +
BLANKVALUE(Sales_ALI__c , 0) + BLANKVALUE(SALES_OTHER_Rental__c , 0) + BLANKVALUE(SALES_OTHER_Freight_insurance_etc__c , 0)</errorConditionFormula>
        <errorDisplayField>sf42_Amount__c</errorDisplayField>
        <errorMessage>Please check the entries for the Total Amount and each sales amount if they correct!!!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>received_date_is_entered</fullName>
        <active>true</active>
        <description>When bank is selected than date field cant be empty

AND(OR( ISPICKVAL(sf42_Received_at__c, &quot;Tokyo Mitsubishi UFJ&quot;), ISPICKVAL(sf42_Received_at__c, &quot;Deutsche Bank&quot;)), ISNULL( sf42_Received_on__c ))</description>
        <errorConditionFormula>AND(OR( ISPICKVAL(sf42_Received_at__c, &quot;Tokyo Mitsubishi UFJ&quot;), ISPICKVAL(sf42_Received_at__c, &quot;Deutsche Bank&quot;)), ISNULL( sf42_Received_on__c ))</errorConditionFormula>
        <errorMessage>&quot;No Date or no bank selected!!&quot;</errorMessage>
    </validationRules>
</CustomObject>